Update docker config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,12 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-	"postCreateCommand": "\
-	curl -fsSL https://starship.rs/install.sh | sh -s -- -y && \
-	grep -q 'starship init bash' ~/.bashrc || \
-	echo 'eval \"$(starship init bash)\"' >> ~/.bashrc \
-	",
+	"updateRemoteUserUID": true,
+	"postCreateCommand": "mkdir -p ~/.local/bin && curl -fsSL https://starship.rs/install.sh | sh -s -- -y -b ~/.local/bin && grep -q 'starship init bash' ~/.bashrc || echo 'eval \"$(~/.local/bin/starship init bash)\"' >> ~/.bashrc && grep -q 'export PATH=\"$HOME/.local/bin:$PATH\"' ~/.bashrc || echo 'export PATH=\"$HOME/.local/bin:$PATH\"' >> ~/.bashrc",
 	"mounts": [
 		"source=${localEnv:SSH_AUTH_SOCK},target=/ssh-agent,type=bind"
 	],
 	"remoteEnv": {
 		"SSH_AUTH_SOCK": "/ssh-agent"
-	},
+	}
 }
