--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 FROM ubuntu:24.04
 
-RUN apt-get update && apt-get -y install cmake gcc g++ curl git
+RUN apt-get update && apt-get -y install cmake gcc g++ curl git sudo \
+    && rm -rf /var/lib/apt/lists/*
