--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu:24.04
 
-RUN apt-get update && apt-get -y install cmake gcc g++ curl git sudo \
+RUN apt-get update && apt-get -y install cmake gcc g++ curl git sudo python3 \
     && rm -rf /var/lib/apt/lists/*
