Add minimum spanning tree (Kruskal method only)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,3 +9,4 @@ add_gtest(test_unionfind)
 add_gtest(test_shortest_path)
 add_gtest(test_fenwick_tree)
 add_gtest(test_concept)
+add_gtest(test_minimum_spanning_tree)
